--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-            <a class="navbar-brand" href="#"><img src="assets/imgs/OT Photo & Design Logo_(white).svg" alt="OT Photography Logo" style="width:190px"></a>
-            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+            <a class="navbar-brand" href="./index.html"><img src="assets/imgs/OT Photo & Design Logo_(white).svg" alt="OT Photography Logo" style="width:190px"></a>
+            <ul class="navbar-nav justify-content-end">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="./index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Gallery</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <!-- <li class="nav-item">
                     <a class="nav-link disabled" href="#">Disabled</a>
-                </li>
+                </li> -->
             </ul>
             <!-- <form class="form-inline my-2 my-lg-0">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
