added About page and animations

--- a/gallery.html
+++ b/gallery.html
@@ -47,16 +47,30 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/Vanessa&Troy-249.jpg" alt="VT1" style="width:350px;height:240px;">
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <img class="move rounded" src="./assets/imgs/_MG_0033.jpg" alt="VT1" style="width:350px;height:544px;">
+                        <p>Copyright ©</p>
                     </div>
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/WedingPhoto2.jpg" alt="WeddingPhoto2" style="width:350px;height:240px;">
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <img class="move rounded" src="./assets/imgs/_MG_0245.jpg" alt="WeddingPhoto2" style="width:350px;height:544px;">
+                        <p>Copyright ©</p>
                     </div>
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/AnjaleCarl1.jpg" alt="AnjaleCarl" style="width:350px;height:240px;">
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                        <img class="move rounded" src="./assets/imgs/_MG_0264.jpg" alt="AnjaleCarl" style="width:350px;height:544px;">
+                        <p>Copyright ©</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <img class="move rounded" src="./assets/imgs/_MG_0269.jpg" alt="VT1" style="width:350px;height:544px;">
+                        <p>Copyright ©</p>
+                    </div>
+                    <div class="col">
+                        <img class="move rounded" src="./assets/imgs/_MG_9972.jpg" alt="WeddingPhoto2" style="width:350px;height:544px;">
+                        <p>Copyright ©</p>
+                    </div>
+                    <div class="col">
+                        <img class="move rounded" src="./assets/imgs/_MG_0272.jpg" alt="AnjaleCarl" style="width:350px;height:544px;">
+                        <p>Copyright ©</p>
                     </div>
                 </div>
             </div>
