changing the names of some photos

--- a/gallery.html
+++ b/gallery.html
@@ -47,29 +47,29 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/_MG_0033.jpg" alt="VT1" style="width:350px;height:544px;">
+                        <img class="move rounded" src="./assets/imgs/MG_0033.jpg" alt="VT1" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/_MG_0245.jpg" alt="WeddingPhoto2" style="width:350px;height:544px;">
+                        <img class="move rounded" src="./assets/imgs/MG_0245.jpg" alt="WeddingPhoto2" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/_MG_0264.jpg" alt="AnjaleCarl" style="width:350px;height:544px;">
+                        <img class="move rounded" src="./assets/imgs/MG_0264.jpg" alt="AnjaleCarl" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/_MG_0269.jpg" alt="VT1" style="width:350px;height:544px;">
+                        <img class="move rounded" src="./assets/imgs/MG_0269.jpg" alt="VT1" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/_MG_9972.jpg" alt="WeddingPhoto2" style="width:350px;height:544px;">
+                        <img class="move rounded" src="./assets/imgs/MG_9972.jpg" alt="WeddingPhoto2" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
                     <div class="col">
-                        <img class="move rounded" src="./assets/imgs/_MG_0272.jpg" alt="AnjaleCarl" style="width:350px;height:544px;">
+                        <img class="move rounded" src="./assets/imgs/MG_0272.jpg" alt="AnjaleCarl" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
                 </div>
