added more to my About page

--- a/about.html
+++ b/about.html
@@ -54,11 +54,13 @@
                         <!-- <img class="move rounded" src="./assets/imgs/WedingPhoto2.jpg" alt="WeddingPhoto2" style="width:350px;height:240px;"> -->
                         <h2 class="animated fadeInDown">Osei Thompson</h2>
                         <p class="animated bounceInRight">Hi,
-                            I have been a photographer for 10 years photographing weddings for about 5 years in the Toronto area. It has always been my goal to capture the best of everyone at the right moment. 
+                            I have been a photographer for 10 years photographing weddings for about 5 years in the Toronto area. It has always been my goal to capture the best of everyone at the right moment. I also have a degree in Graphics Design and have worked for several years as a pre-press operator.  
                         </p>
                         <p class="animated bounceInRight">
                             My style of photography is more journalistic rather than posed. I believe that in order to capture people at their best is usually when they don't know they are being photographed.
                         </p>
+                        <p class="animated bounceInRight">To add to my Photography and Design experience I have also completed a Web Development bootcamp course at University of Toronto. Learning HTML, CSS, Javascript, Node JS, AJAX, MySQL, Mongo DB, and GitBash with introductions into REACT and C#.</p>
+                        <p class="animated bounceInRight">Although I may have experience in all of these fields my learning and hasn't stopped. Each of these fields have new challenges that I have not experienced before and so I never stop learning.</p>
                     </div>
                     <!-- <div class="col">
                         <img class="move rounded" src="./assets/imgs/AnjaleCarl1.jpg" alt="AnjaleCarl" style="width:350px;height:240px;">
