--- a/gallery.html
+++ b/gallery.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OT Photography</title>
+    <link rel="stylesheet" href="animate.css" media="screen" />
     <link rel="stylesheet" href="gallery.css" media="screen" />
 </head>
 <body>
@@ -46,18 +47,21 @@
             
             <div class="container">
                 <div class="row">
-                    <div class="col">
+                    <div class="animated fadeInLeft col">
                         <img class="move rounded" src="./assets/imgs/MG_0033.jpg" alt="VT1" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
-                    <div class="col">
+                    <div class="animated fadeInDown col">
                         <img class="move rounded" src="./assets/imgs/MG_0245.jpg" alt="WeddingPhoto2" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
-                    <div class="col">
+                    <div class="animated fadeInRight col">
                         <img class="move rounded" src="./assets/imgs/MG_0264.jpg" alt="AnjaleCarl" style="width:350px;height:544px;">
                         <p>Copyright ©</p>
                     </div>
+                </div>
+                <div>
+                    <p id="line"></p>
                 </div>
                 <div class="row">
                     <div class="col">
