--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OT Photography</title>
+    <link rel="stylesheet" href="animate.css" media="screen" />
     <link rel="stylesheet" href="style.css" media="screen" />
 </head>
 <body>
@@ -43,7 +44,8 @@
     </nav>
     </div>                                                                                   <div>
             <img src="./assets/imgs/Anjale & Carl-(dkgrey).jpg">
-            <div class="container">                                                             <img src="./assets/imgs/WeddingPhoto5.jpg" alt="WeddingPhoto5">
+            <div class="container animated fadeInDown">
+                <img src="./assets/imgs/WeddingPhoto5.jpg" alt="WeddingPhoto5">
             </div>
         </div> 
         
