--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </form> -->
         </div>
     </nav>
-    </div>                                                                                   <div>
+    </div>                                                                                      <div>
             <img src="./assets/imgs/Anjale & Carl-(dkgrey).jpg">
             <div class="container animated fadeInDown">
                 <img src="./assets/imgs/WeddingPhoto5.jpg" alt="WeddingPhoto5">
@@ -63,14 +63,16 @@
                 <div class="row">
                     <div class="col">
                         <img class="move rounded" src="./assets/imgs/Vanessa&Troy-249.jpg" alt="VT1" style="width:350px;height:240px;">
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                     <div class="col">
                         <img class="move rounded" src="./assets/imgs/WedingPhoto2.jpg" alt="WeddingPhoto2" style="width:350px;height:240px;">
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                     <div class="col">
                         <img class="move rounded" src="./assets/imgs/AnjaleCarl1.jpg" alt="AnjaleCarl" style="width:350px;height:240px;">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col" style="text-align: center;">
                         <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                     </div>
                 </div>
@@ -82,13 +84,13 @@
                     <h5>Copyright ©</h5>
                     <div class="row">
                         <div class="col">
-                            <p class="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                            
                         </div>
                         <div class="col">
-                            <p class="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
                         </div>
                         <div class="col">
-                            <p class="text">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+                            
                         </div>
                     </div>
                 </div>
