added social media buttons to other pages

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>OT Photography</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="animate.css" media="screen" />
     <link rel="stylesheet" href="about.css" media="screen" />
 </head>
@@ -20,6 +21,18 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
             <a class="navbar-brand" href="./index.html"><img src="assets/imgs/OT Photo & Design Logo_(white).svg" alt="OT Photography Logo" style="width:190px"></a>
             <ul class="navbar-nav justify-content-end">
+                <li>
+                    <a href="#" class="fa fa-facebook"></a>
+                </li>
+                <li>
+                    <a href="#" class="fa fa-twitter"></a>
+                </li>
+                <li>
+                    <a href="#" class="fa fa-instagram"></a>
+                </li>
+                <li>
+                    <a href="#" class="fa fa-linkedin"></a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./index.html">Home</a>
                 </li>
