--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
             <footer>
                 <div class="copy">
-                    <h5>Copyright ©</h5>
+                    <h6>OT Photography 2018 Copyright ©</h6>
                     <div class="row">
                         <div class="col">
                             
