--- a/gallery.html
+++ b/gallery.html
@@ -22,16 +22,16 @@
             <a class="navbar-brand" href="./index.html"><img src="assets/imgs/OT Photo & Design Logo_(white).svg" alt="OT Photography Logo" style="width:190px"></a>
             <ul class="navbar-nav justify-content-end">
                 <li>
-                    <a href="#" class="fa fa-facebook"></a>
+                    <a target="_blank" href="https://www.facebook.com/otphotography.ca/" class="fa fa-facebook"></a>
                 </li>
                 <li>
-                    <a href="#" class="fa fa-twitter"></a>
+                    <a target="_blank" href="https://twitter.com/OseiThompson2" class="fa fa-twitter"></a>
                 </li>
                 <li>
-                    <a href="#" class="fa fa-instagram"></a>
+                    <a target="_blank" href="https://www.instagram.com/oseithompson0/" class="fa fa-instagram"></a>
                 </li>
                 <li>
-                    <a href="#" class="fa fa-linkedin"></a>
+                    <a target="_blank" href="https://www.linkedin.com/in/osei-thompson/" class="fa fa-linkedin"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="./index.html">Home</a>
